--- a/BookBooks/Views/Shared/_DeleteBook.cshtml
+++ b/BookBooks/Views/Shared/_DeleteBook.cshtml
@@ -10,7 +10,7 @@
                 <p>O livro será exclúido permanentemente.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger">Excluir</button>
+                <button type="button" class="btn btn-danger" asp-controller="Livro" asp-action="DeleteBook">Excluir</button>
                 <button role="button" type="button" class="btn btn-primary" data-bs-dismiss="modal">Voltar</button>
             </div>
         </div>
