--- a/BookBooks/Views/Livro/Index.cshtml
+++ b/BookBooks/Views/Livro/Index.cshtml
@@ -34,8 +34,11 @@
                         <td>@livro.AnoPublicacao</td>
                         <td>
                             <div class="btn-group btn-group-sm" role="group">
-                                <a role="button" class="btn btn-primary" asp-route-itemid="@livro.Id" asp-controller="Livro" asp-action="EditarLivro">Editar</a>
-                                <a role="button" class="btn btn-danger open-delete-modal" asp-route-itemid="@livro.Id" data-url="@Url.Action("OpenDeleteModelPartial")">Excluir</a>
+                                <a role="button" class="btn btn-primary" 
+                                asp-route-id="@livro.Id" asp-controller="Livro" asp-action="EditarLivro">Editar</a>
+
+                                <button role="button" class="btn btn-danger open-delete-modal" 
+                                        asp-route-id="@livro.Id" data-url="@Url.Action("OpenDeleteModelPartial", new { id = livro.Id })">Excluir</button>
                             </div>
                         </td>
                     </tr>
