--- a/BookBooks/Views/Shared/_DeleteBook.cshtml
+++ b/BookBooks/Views/Shared/_DeleteBook.cshtml
@@ -1,18 +1,24 @@
-﻿
-<div id="deleteModal" class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Deseja realmente apagar o livro?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>O livro será exclúido permanentemente.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" asp-controller="Livro" asp-action="DeleteBook">Excluir</button>
-                <button role="button" type="button" class="btn btn-primary" data-bs-dismiss="modal">Voltar</button>
+﻿@using BookBooks.Models
+
+@model LivroModel
+
+<form asp-controller="Livro" asp-action="Excluir" method="post">
+    <input type="hidden" asp-for="Id" />
+    <div id="deleteModal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Deseja realmente apagar o livro?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>O livro será exclúido permanentemente.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-danger">Excluir</button>
+                    <button role="button" type="button" class="btn btn-primary" data-bs-dismiss="modal">Voltar</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
