--- a/BookBooks/wwwroot/css/site.css
+++ b/BookBooks/wwwroot/css/site.css
@@ -25,3 +25,12 @@ body {
 .field-validation-error{
     color: red;
 }
+
+.close-alert{
+    position: absolute;
+    right: -10px;
+    top: -15px;
+    border-radius: 15px;
+    widht: 30px;
+    height: 31px;
+}
