added jquery datatable

--- a/BookBooks/Views/Livro/Index.cshtml
+++ b/BookBooks/Views/Livro/Index.cshtml
@@ -32,13 +32,14 @@
 
     <h1 class="display-4">@ViewData["Title"]</h1>
 
-    <table class="table">
+    <table class="table" id="table-livros">
         <thead>
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Título</th>
                 <th scope="col">Autor</th>
                 <th scope="col">Ano</th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
