edit user method added + user model without pw

--- a/BookBooks/Views/Usuario/Criar.cshtml
+++ b/BookBooks/Views/Usuario/Criar.cshtml
@@ -11,7 +11,7 @@
     <div class="form-group">
         <label for="autor">* Perfil</label>
         <select asp-for="Perfil" class="form-control">
-            <option value="0">Selecione:</option>
+            <option value="">Selecione:</option>
             <option value="@PerfilEnum.Admin">Admin</option>
             <option value="@PerfilEnum.Default">Default</option>
         </select>
