--- a/BookBooks/Views/Usuario/Index.cshtml
+++ b/BookBooks/Views/Usuario/Index.cshtml
@@ -36,6 +36,7 @@
         <thead>
             <tr>
                 <th scope="col">#</th>
+                <th scope="col">Perfil</th>
                 <th scope="col">Nome</th>
                 <th scope="col">Login</th>
                 <th scope="col">Email</th>
@@ -50,6 +51,7 @@
                 {
                     <tr>
                         <th scope="row">@usuario.Id</th>
+                        <td>@usuario.Perfil</td>
                         <td>@usuario.Nome</td>
                         <td>@usuario.Login</td>
                         <td>@usuario.Email</td>
@@ -57,7 +59,7 @@
                         <td>
                             <div class="btn-group btn-group-sm" role="group">
                                 <a role="button" class="btn btn-primary"
-                                   asp-route-id="@usuario.Id" asp-controller="Usuario" asp-action="Editar">Editar</a>
+                                   asp-route-id="@usuario.Id" asp-controller="Usuario" asp-action="Edit">Editar</a>
 
                                 <button role="button" class="btn btn-danger open-delete-modal"
                                         asp-route-id="@usuario.Id" data-url="@Url.Action("OpenDeleteModelPartial", new { id = usuario.Id })">Excluir</button>
